# skyweaver

./: .bdm.db  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.skyweavercpp  Dockerfile.skyweaverpy  LICENSE  PsrDadaBlock.hpp  PsrDadaHeader.hpp  README.md  common.hpp  raw_bytes.hpp  requirements.txt  utils.hpp
.nextflow/: .bdm.db
.nextflow/plr/: .bdm.db
cmake/: .bdm.db  boost.cmake  compiler_settings.cmake  cuda.cmake  dependencies.cmake  doxygen.cmake  googlebenchmark.cmake  googletest.cmake  psrdada.cmake  psrdadacpp.cmake
cpp/: .bdm.db  CMakeLists.txt
cpp/cmake/: compiler_settings.cmake  cuda.cmake  dependencies.cmake  psrdadacpp.cmake
cpp/fbfuse/: CMakeLists.txt  OfflinePipeline.cuh
cpp/fbfuse/detail/: OfflinePipeline.cu
cpp/skyweaver/: .bdm.db  AggregationBuffer.cuh  BeamformerPipeline.cuh  BufferedDispenser.cuh  CMakeLists.txt  CoherentBeamformer.cuh  CoherentDedisperser.cuh  DedispersionPlan.hpp  DelayManager.cuh  DescribedVector.hpp  FileOutputStream.hpp  Header.hpp  IncoherentBeamformer.cuh  IncoherentDedisperser.cuh  IncoherentDedispersionPipeline.cuh  MultiBeamWriter.hpp  MultiFileReader.cuh  MultiFileReader.hpp  MultiFileWriter.cuh  MultiFileWriter.hpp  ObservationHeader.hpp  PipelineConfig.hpp  SigprocFileWriter.hpp  SigprocHeader.hpp  SkyCleaver.cuh  SkyCleaver.hpp  SkyCleaverConfig.hpp  StatisticsCalculator.cuh  Timer.hpp  Transposer.cuh  WeightsManager.cuh  beamformer_utils.cuh  dedispersion_utils.cuh  logging.hpp  nvtx_utils.h  skycleaver_utils.hpp  skyweaver_constants.hpp  types.cuh
cpp/skyweaver/benchmark/: .bdm.db  CMakeLists.txt  beamformer_bench.cu
cpp/skyweaver/detail/: .bdm.db  AggregationBuffer.cu  BeamformerPipeline.cu  Header.cpp  IncoherentDedispersionPipeline.cu  MultiFileWriter.cpp  MultiFileWriter.cu  SigprocHeader.cpp  SkyCleaver.cpp  file_writer_callbacks.cpp
cpp/skyweaver/src/: .bdm.db  BufferedDispenser.cu  CoherentBeamformer.cu  CoherentDedisperser.cu  DedispersionPlan.cpp  DelayManager.cu  DescribedVector.cpp  FileOutputStream.cpp  Header.cpp  IncoherentBeamformer.cu  IncoherentDedisperser.cu  MultiFileReader.cpp  MultiFileReader.cu  MultiFileWriter.cpp  MultiFileWriter.cu  ObservationHeader.cpp  PipelineConfig.cpp  SigprocFileWriter.cpp  SigprocHeader.cpp  SkyCleaver.cpp  SkyCleaver.cu  StatisticsCalculator.cu  Timer.cpp  Transposer.cu  WeightsManager.cu  skycleaver_cli.cpp  skycleaver_cli.cu  skyweaver_cli.cu
cpp/skyweaver/test/: .bdm.db  AggregationBufferTester.cuh  BeamformerPipelineTester.cuh  BufferedDispenserTester.cuh  CMakeLists.txt  CoherentBeamformerTester.cuh  CoherentDedisperserTester.cuh  DelayManagerTester.cuh  IncoherentBeamformerTester.cuh  IncoherentDedisperserTester.cuh  IncoherentDedispersionPipelineTester.cuh  MultiFileReaderTester.cuh  MultiFileWriterTester.cuh  MultiFileWriterTester.hpp  ObservationHeaderTester.hpp  StatisticsCalculatorTester.cuh  TransposerTester.cuh  WeightsManagerTester.cuh  test_utils.cuh
cpp/skyweaver/test/data/: .bdm.db
cpp/skyweaver/test/data/dada_files/: .bdm.db  data.dada  data_chunk_0.dada  data_chunk_1.dada  data_chunk_2.dada  data_chunk_3.dada  data_chunk_4.dada  data_chunk_5.dada  data_chunk_6.dada  data_chunk_7.dada  data_chunk_8.dada  data_chunk_9.dada
cpp/skyweaver/test/data/dedispersion/: .bdm.db
cpp/skyweaver/test/src/: .bdm.db  AggregationBufferTester.cu  BeamformerPipelineTester.cu  BufferedDispenserTester.cu  CoherentBeamformerTester.cu  CoherentDedisperserTester.cu  DelayManagerTester.cu  IncoherentBeamformerTester.cu  IncoherentDedisperserTester.cu  IncoherentDedispersionPipelineTester.cu  MultiFileReaderTester.cu  MultiFileWriterTester.cpp  MultiFileWriterTester.cu  ObservationHeaderTester.cpp  StatisticsCalculatorTester.cu  TransposerTester.cu  WeightsManagerTester.cu
doc/: .bdm.db  Doxyfile.in  conf.py  index.rst
examples/: .bdm.db
examples/config_files/: .bdm.db  test_config_0.yaml
examples/metadata_files/: .bdm.db  bvrmetadata_2024-02-16T08:51:19_8d6b2.hdf5  bvrmetadata_2024-02-16T10:50:46_72275.hdf5  bvrmetadata_2024-02-16T12:50:38_b5682.hdf5
loader/: MultiFileReader.hpp
loader/src/: MultiFileReader.cpp
prototyping/: .bdm.db  tbf_tfb_performance_testing.cpp
python/: .bdm.db  README.md  setup.py
python/skyweaver/: .bdm.db  __init__.py  cli.py  skyweaver.py
python/skyweaver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/skyweaver/__pycache__/: .bdm.db
python/skyweaver_test_utils/: .bdm.db  dedisperse.py  generate_file_chunks.py
python/tests/: .bdm.db  test_skyweaver.py
skyweaver/: cli.py  skyweaver.py
skyweaver.egg-info/: PKG-INFO  SOURCES.txt
src/: PsrDadaHeader.cpp  SkyWeaver.cpp  raw_bytes.cpp  utils.cpp
tests/data/config_files/: test_config_0.yaml
tests/data/metadata_files/: bvrmetadata_2024-02-16T10:50:46_72275.hdf5
